# advent-of-code

2015-rust/: Cargo.toml  rustfmt.toml
2015-rust/days/: 1.1.rs  1.2.rs  2.1.rs  2.2.rs  3.1.rs  3.2.rs
2015-rust/src/: lib.rs
2016-haskell/: advent-of-code.cabal  cabal.project
2016-haskell/days/: Day1.hs
2016-haskell/src/: AdventOfCode.hs  Day.hs  Day1.hs  Direction.hs  Fail.hs  Rotation.hs
2016-haskell/src/Data/Bifunctor/: Extended.hs
2016-haskell/src/Data/Char/: Extended.hs
2016-haskell/src/Data/List/: Extended.hs
2016-haskell/src/Data/Maybe/: Extra.hs
2016-haskell/src/Data/Text/: Extended.hs
2016-haskell/src/Data/Text/Read/: Extended.hs
2016-haskell/src/Linear/V2/: Extended.hs
2016-haskell/test/: Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day5Spec.hs  Day6Spec.hs  Day7Spec.hs
2025-racket/: advent-of-code.rkt  char.rkt  day-1.rkt  day-2.rkt  day-3.rkt  day-4.rkt  day-5.rkt  day-6.rkt  list.rkt  number.rkt  string.rkt  vector.rkt
