[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

missing_panics_doc = { level = "allow", priority = 1 }
fallible_impl_from = { level = "allow", priority = 1 }
unnecessary_wraps = { level = "allow", priority = 1 }
