cabal-version: 3.14
name: advent-of-code
version: 0.1.0.0
build-type: Simple

common warnings
  ghc-options:
    -Wall
    -Wredundant-constraints
    -Wunused-packages
    -Wno-name-shadowing

common language
  default-language:
    GHC2024

  default-extensions:
    BlockArguments
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    ViewPatterns

executable advent-of-code
  import:
    warnings,
    language,

  hs-source-dirs:
    bin

  main-is:
    Main.hs

  build-depends:
    base

  build-depends:
    advent-of-code

library
  import:
    warnings,
    language,

  hs-source-dirs:
    src

  exposed-modules:
    AdventOfCode
    Day1

  build-depends:
    base,
    containers,
    text,

test-suite spec
  import:
    warnings,
    language,

  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    test

  main-is:
    Spec.hs

  other-modules:
    Day1Spec

  build-depends:
    advent-of-code,
    base,
    hspec,

  build-tool-depends:
    hspec-discover:hspec-discover
