cabal-version: 3.14
name: advent-of-code
version: 0.1.0.0
build-type: Simple

common warnings
  ghc-options:
    -Wall
    -Wredundant-constraints
    -Wunused-packages
    -Wno-name-shadowing

common language
  default-language:
    GHC2024

  default-extensions:
    BlockArguments
    DerivingStrategies
    DuplicateRecordFields
    LexicalNegation
    MultilineStrings
    OrPatterns
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    Strict
    ViewPatterns

common day
  import:
    warnings,
    language,

  hs-source-dirs:
    bin

  build-depends:
    advent-of-code,
    base,

library
  import:
    warnings,
    language,

  hs-source-dirs:
    src

  exposed-modules:
    Bin.Day1
    Bin.Day2
    Bin.Day3
    Bin.Day4
    Bin.Day5

  other-modules:
    Data.Char.Extended
    Data.List.Extended
    Data.Text.Extended
    Data.Text.Read.Extended
    Day
    Direction
    Fail
    Linear.V2.Extended
    Rotation

  build-depends:
    base,
    containers,
    linear,
    pureMD5,
    text,

test-suite spec
  import:
    warnings,
    language,

  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    test

  main-is:
    Spec.hs

  other-modules:
    Day1Spec
    Day2Spec
    Day3Spec
    Day4Spec
    Day5Spec

  build-depends:
    advent-of-code,
    base,
    hspec,

  build-tool-depends:
    hspec-discover:hspec-discover

executable day-1
  import: day
  main-is: Day1.hs

executable day-2
  import: day
  main-is: Day2.hs

executable day-3
  import: day
  main-is: Day3.hs

executable day-4
  import: day
  main-is: Day4.hs

executable day-5
  import: day
  main-is: Day5.hs
